# tokio-rustls-client-verifier

./: Cargo.toml
certs/: ca.crt  client.crt  client.key  server.crt  server.key
src/: main.rs
