[package]
name = "tokio_rustls_client_verifier_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["net", "rt-multi-thread", "macros"] }
tokio-rustls = "0.25.0"
pem = "3.0.3"
